# code-agent

./: README.md  pyproject.toml  setup.py
codeagent/: cli.py  init.py  main.py
codeagent/agent/: action_executor.py  code_agent.py  context_manager.py  conversation_state.py  json_parser.py  project_context.py  prompts.py  workflows.py
codeagent/context/: agent_md.py  embeddings.py  project_context.py
codeagent/tools/: agent_tools.py  code_tools.py  execution_tools.py  file_tools.py  permissions.py  search_tools.py
codeagent/utils/: config.py  logger.py  ollama.py
examples/: project_exploration.py  simple_task.py
tests/: init.py  test_agent.py  test_context.py
